# raster

./: README.md  pyproject.toml
raster/: __init__.py  __main__.py  _freezestub.py  assess.py  build.py  cli.py  config.py  execlib.py  freeze_review.py  freezelint.py  init.py  ollama.py  plan.py  queue.py  runlog.py  spec.py  trundlr.py
raster/templates/: DESIGN.md.tmpl  PLANNING.md.tmpl  PROGRESS.md.tmpl  gitignore.tmpl  raster.yaml.tmpl  tasks.yaml.tmpl
tests/: test_build.py  test_scaffold.py
